# Magritte

./: .CMakeLists.txt.swp  .gitignore  .gitignore~  .travis.yml  .travis.yml.swp  3D-RT  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.defs  README  README.md  build.sh  cmake_install.cmake  configure.sh  configure.sh~  configure~  install.sh  installGrid.sh  installMPICH.sh  magritte_conda_env.yaml  magritte_conda_environment.yml  parameters.hpp  parameters.txt  run.sh  setup  setup.py  valgrind.txt  vg.txt
3D-RT_merged/CMake/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README  cmake_install.cmake
RadiativeTransfer/: .travis.yml  CMakeLists.txt  README.md  cells.cpp
RadiativeTransfer/src/: .RadiativeTransfer.hpp.swp  .RadiativeTransfer.tpp.swp  .feautrier.cpp.swp  .feautrier.hpp.swp  .radiative_transfer.hpp.swp  CMakeLists.txt  Magritte_macros.hpp  RadiativeTransfer.hpp  RadiativeTransfer.tpp  cells.hpp  cells.tpp  cells_f.hpp  cells_f.tpp  declarations.hpp  feautrier.cpp  feautrier.hpp  main.cpp  radiative_transfer.cpp  rays.hpp  rays.tpp  thefile.txt
RadiativeTransfer/tests/: .test_RadiativeTransfer.cpp.swp  .test_feautrier.cpp.swp  CMakeLists.txt  run_tests.sh  test_RadiativeTransfer.cpp  test_cells.cpp  test_cells_f.cpp  test_feautrier.cpp  test_rays.cpp
benchmarks/: CMakeLists.txt  bm1_radiation.cpp  bm1_radiation_cpu.cpp  bm1_radiation_gpu.cpp  bm2_levelpops.cpp
examples/: CMakeLists.txt  README.md  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  example_5.cpp
modules/Lines/: CMakeLists.txt  README.md
modules/Magritte/: CMakeLists.txt  README.md  build.sh
pySetup/: CMakeLists.txt  MagritteCppFunctions.cpp  data_structures.cpp  data_tools.cpp  data_tools.hpp  directories.hpp  lineData.py  makeRates.py  run_setup.sh  setup.py  setupFunctions.py  setup_healpixvectors.cpp  setup_healpixvectors.hpp  test.hpp  test2.hpp
pySetup/HEALPix/: CMakeLists.txt
pySetup/standard_code/: rate_equations_hd.txt
setup/: CMakeCache.txt  CMakeLists.txt  MakeJacobian.py  Makefile  NLSPEC.hpp  README  Untitled.ipynb  amrvac_input.py  cmake_install.cmake  configure.py  declarations_std.txt  definitions_hd.txt  definitions_std.txt  directories.hpp  image.py  input.py  make_rates.py  mapModel.py  mesh.py  output_directory.hpp  outputdirectory.hpp  pre_setup  pre_setup.cpp  pre_setup_declarations.hpp  pre_setup_definitions.hpp  pre_setup_parameters.hpp  rays.py  run_setup.sh  run_test_setup.sh  setup  setup.cpp  setup.hpp  setup.py  setup_data_structures.cpp  setup_data_structures.hpp  setup_data_tools.cpp  setup_data_tools.hpp  setup_definitions.hpp  setup_healpixvectors.cpp  setup_healpixvectors.hpp  (+5 more)
setup/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  setup-checkpoint.py
setup/HEALPix/: ang2pix_nest.cpp  pix2vec_nest.cpp
setup/alternatives/: declarations_std.txt  definitions_hd.txt  definitions_std.txt  parameters.txt  pre_setup_definitions.hpp  pre_setup_parameters.hpp  setup.cpp  setup_tools.cpp  setup_tools.hpp
setup/standard_code/: declarations_hd.txt  declarations_std.txt  definitions_std.txt  jacobian.cpp  jacobian_hd.txt  rate_equations_hd.txt
src/: #level_population_solver.hpp#  3D-RT.cpp  AV_calculator.cpp  AV_calculator.hpp  CMakeLists.txt  Magritte.cpp  Magritte_chemistry.cpp  Magritte_config.hpp  Magritte_constants.hpp  Magritte_io.cpp  Magritte_macros.hpp  Magritte_o.cpp  Magritte_types.hpp  Makefile  README.md  UV_field_calculator.cpp  UV_field_calculator.hpp  abundance.cpp  abundance.hpp  abundances.cpp  abundances.hpp  acceleration_Ng.cpp  acceleration_Ng.hpp  bound.cpp  bound.hpp  calc_AV.cpp  calc_AV.hpp  calc_C_coeff.cpp  calc_C_coeff.hpp  calc_LTE_populations.cpp  calc_LTE_populations.hpp  calc_UV_field.cpp  calc_UV_field.hpp  calc_column_density.cpp  calc_column_density.hpp  calc_rad_surface.cpp  calc_rad_surface.hpp  calc_reac_rates.cpp  calc_reac_rates.hpp  calc_reac_rates_rad.cpp  (+115 more)
src/Functions/: interpolation.hpp  interpolation.tpp  planck.hpp  planck.tpp  sort.hpp
src/HEALPix/: CMakeLists.txt  Makefile  ang2pix_nest.cpp  chealpix.hpp  cmake_install.cmake  pix2vec_nest.cpp  vec2ang.cpp
src/Io/: io.cpp  io.hpp  io_Python.cpp  io_Python.hpp  io_hdf5.py  io_text.cpp  io_text.hpp
src/MakeRates/: jacobian_header.txt  rate_equations_header.txt
src/Model/: model.cpp  model.hpp  parameters.cpp  parameters.hpp
src/Simulation/: sim_lines.tpp  sim_radiation.tpp  sim_spectrum.tpp  simulation.cpp  simulation.cu  simulation.hpp  simulation.tpp
src/Tools/: constants.hpp  debug.hpp  logger.hpp  setOnce.hpp  timer.hpp  types.hpp
src/alternatives/: alt_level_population_solver.cpp  alt_rate_equation_solver.cpp  level_population_solver.cpp_B
src/bindings/: CMakeLists.txt  README.md  cuBindings.cpp  ioBindings.cpp  pyBindings.cpp
src/examples/: CMakeLists.txt  README.md  example_2.cpp  example_2_cpu.cpp  example_2_gpu.cpp  example_4.cpp  example_6_gpu.cpp  example_7_gpu.cpp  example_8_gpu.cpp
src/make_rates/: README  make_rates.py
src/sundials/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  jacobian.cpp  rate_equation_solver.cpp  rate_equation_solver.hpp  rate_equations.cpp
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  parameters_for_testing.txt  run_tests.sh  test_chemistry  test_column_density_calculator  test_column_density_calculator.cpp  test_exact_feautrier  test_exact_feautrier.cpp  test_level_population_solver  test_level_population_solver.cpp  test_main.cpp  test_radfield_tools  test_rate_calculations_radfield  test_rate_calculations_radfield.cpp  test_ray_tracing  test_ray_tracing.cpp  test_species_tools  test_species_tools.cpp  test_spline  test_spline_func.txt  test_spline_table.txt
tests/Io/: test_io_Python.cpp
tests/Model/: test_parameters.cpp
tests/integration/: run_integration_tests.sh  test_0_1D_all_constant.ipynb  test_0_1D_all_constant.py  test_1_1D_velocity_gradient.ipynb  test_1_1D_velocity_gradient.py  test_2_2D_VanZadelhoff_1a.ipynb  test_2_2D_VanZadelhoff_1a.py
tests/integration_tests/: CMakeLists.txt  run_integration_tests.sh  (+5 more)
(+3746 files in other folders)
